@@ -7,6 +7,8 @@ import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.MediaType;
 import org.springframework.http.ResponseEntity;
+import org.springframework.security.core.Authentication;
+import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.stereotype.Controller;
 import org.springframework.ui.Model;
 import org.springframework.web.bind.annotation.*;
@@ -51,7 +53,29 @@ public class GioHangController {
     KhuyenMaiService khuyenMaiService;
     @Autowired
     private VnPay vnPay;
+    @Autowired
+    KhachHangService khachHangService;
+    public String getCurrentUserEmail() {
+        Authentication authentication = SecurityContextHolder.getContext().getAuthentication();
+        if (authentication != null && authentication.isAuthenticated()) {
+            return authentication.getName(); // Trả về email của người dùng đã đăng nhập
+        }
+        return null; // Nếu chưa đăng nhập, trả về null hoặc giá trị mặc định
+    }
 
+
+    @GetMapping("/tim-giam-gia")
+    @ResponseBody
+    public ResponseEntity<Map<String,Object>> timGiamGia(@RequestParam("maKhuyenMai")String maKhuyenMai){
+        Map<String,Object> response = new HashMap<>();
+        KhuyenMai khuyenMai = khuyenMaiService.findByMaKhuyenMai(maKhuyenMai);
+        if(khuyenMai!=null){
+            response.put("khuyenMai",khuyenMai);
+            return ResponseEntity.ok(response);
+        }
+        response.put("message","Mã giảm giá không tồn tại");
+        return ResponseEntity.badRequest().body(response);
+    }
     @PostMapping("/ma-giam-gia")
     @ResponseBody
     public ResponseEntity<Map<String, Object>> layMaGiamGia(@RequestBody Map<String, String> request) {
@@ -62,7 +86,6 @@ public class GioHangController {
             response.put("message", "Mã khuyến mãi không hợp lệ");
             return ResponseEntity.badRequest().body(response);
         }
-
         double tongTien;
         try {
             tongTien = Double.parseDouble(request.get("totalPrice"));
@@ -73,6 +96,10 @@ public class GioHangController {
 
         KhuyenMai khuyenMai = khuyenMaiService.findByMaKm(maKm);
         if (khuyenMai != null) {
+            if(khuyenMai.getDieuKienApDung()>tongTien){
+                response.put("message","Đơn hàng chưa đủ điều kiện dùng mã giảm giá");
+                return ResponseEntity.badRequest().body(response);
+            }
             double giaGiam;
             if (khuyenMai.getLoaiKhuyenMai()) { // Giảm giá theo số tiền
                 giaGiam = khuyenMai.getGiaTriGiam();
@@ -95,27 +122,33 @@ public class GioHangController {
     public ResponseEntity<?> thanhToanOnline(@RequestBody Map<String, Object> sanPhamThanhToan) {
 
 
-        KhachHang khachHang = (KhachHang) httpSession.getAttribute("khachHangSession");
+        KhachHang khachHang = khachHangService.findByEmail(getCurrentUserEmail());
+        GioHang gioHang = gioHangService.findGioHangByIDKH(khachHang.getId());
         try {
             if (sanPhamThanhToan == null) {
                 return ResponseEntity.badRequest().body(Collections.singletonMap("message", "Dữ liệu không hợp lệ"));
             }
 
-            if (sanPhamThanhToan.containsKey("selectedItems")) {
-                return ResponseEntity.badRequest().body(Collections.singletonMap("message", "Sản phẩm không hợp lê"));
+            if (sanPhamThanhToan == null || !sanPhamThanhToan.containsKey("selectedItems")) {
+                return ResponseEntity.badRequest().body(Map.of("message", "Sản phẩm không hợp lệ"));
             }
-            KhuyenMai khuyenMai = khuyenMaiService.findById(1);
             float tongTienGiam = 0;
-            //Nếu true thì là giảm tiền mặt, false là giảm bằng phần trăm
-            if (khuyenMai.getLoaiKhuyenMai()) {
-                tongTienGiam = tongTienGiam + khuyenMai.getGiaTriGiam();
-            } else {
-                tongTienGiam = (Float.parseFloat(sanPhamThanhToan.get("tongTien").toString()) * khuyenMai.getGiaTriGiam()) / 100;
-            }
+            KhuyenMai khuyenMai =null;
+
+
+
             // Tạo hóa đơn mới
             HoaDon hoaDon = new HoaDon();
             hoaDon.setMaHoaDon(hoaDonService.taoMaHoaDon());
-            hoaDon.setIdKhuyenMai(khuyenMaiService.findById(1));
+            if(gioHang.getIdKhuyenMai()!=null){
+                khuyenMai= khuyenMaiService.findById(gioHang.getIdKhuyenMai().getId());
+                if(khuyenMai!=null){
+                    if(sanPhamThanhToan.get("giamGia")!=null){
+                        tongTienGiam = Float.parseFloat((String) sanPhamThanhToan.get("giamGia"));
+                    }
+                    hoaDon.setIdKhuyenMai(khuyenMai);
+                }
+            }
             hoaDon.setIdKhachHang(khachHang);
             hoaDon.setTenNguoiNhan((String) sanPhamThanhToan.get("hoVaTen"));
             hoaDon.setSdtNguoiNhan((String) sanPhamThanhToan.get("soDienThoai"));
@@ -126,32 +159,29 @@ public class GioHangController {
             hoaDon.setDiaChiChiTiet((String) sanPhamThanhToan.get("diaChiCuThe"));
             hoaDon.setGhiChu((String) sanPhamThanhToan.get("ghiChu"));
             hoaDon.setTienKhachDua(0);
-
             hoaDon.setLoaiHoaDon(true);
             hoaDon.setTienThua(0);
             hoaDon.setTongTienGiam(tongTienGiam);
-
-
             // Kiểm tra và parse giá trị float an toàn
             try {
                 hoaDon.setPhiShip(Float.parseFloat(sanPhamThanhToan.get("tienShip").toString()));
                 hoaDon.setTongTien(Float.parseFloat(sanPhamThanhToan.get("tongTien").toString()));
-
-                hoaDon.setThanhTien(Float.parseFloat(sanPhamThanhToan.get("tongTien").toString()) - tongTienGiam);
-
+                hoaDon.setThanhTien(Float.parseFloat(sanPhamThanhToan.get("thanhTien").toString()));
             } catch (NumberFormatException e) {
                 return ResponseEntity.badRequest().body("Lỗi định dạng số tiền");
             }
-
             hoaDon.setNgayTao(new Date());
             hoaDon.setDonViGiaoHang("Giao hàng tiết kiệm");
             hoaDon.setLoaiHoaDon(true);
             hoaDon.setLoaiThanhToan(true);
-
             hoaDon.setTrangThai(2);
-
             // Lưu hóa đơn vào database
             hoaDonService.save(hoaDon);
+            if(khuyenMai!=null){
+                khuyenMai.setDaSuDung(khuyenMai.getDaSuDung()+1);
+                khuyenMaiService.updateKhuyenMai(khuyenMai,khuyenMai.getId());
+            }
+            //Cập nhật số lượng khuyến mại sau khi khách hàng thanh toán
             TrangThaiDonHang trangThaiDonHang = new TrangThaiDonHang();
             trangThaiDonHang.setTrangThai(hoaDon.getTrangThai());
             trangThaiDonHang.setGhiChu("Chờ xác nhận");
@@ -163,14 +193,12 @@ public class GioHangController {
             if (idCTGH == null || idCTGH.isEmpty()) {
                 return ResponseEntity.badRequest().body("Danh sách sản phẩm trống!");
             }
-
             for (Integer idGioHangChiTiet : idCTGH) {
                 GioHangChiTiet ghct = gioHangChiTietService.findById(idGioHangChiTiet);
                 if (ghct == null) {
                     return ResponseEntity.badRequest().body("Sản phẩm không tồn tại trong giỏ hàng!");
                 }
-
-                // Tạo hóa đơn chi tiết
+                // Tạo hóa đơn chi tiết từ giỏ hàng chi tiết
                 HoaDonChiTiet hoaDonChiTiet = new HoaDonChiTiet();
                 hoaDonChiTiet.setIdHoaDon(hoaDonService.findById(hoaDon.getId()));
                 hoaDonChiTiet.setSoLuong(ghct.getSoLuong());
@@ -180,22 +208,14 @@ public class GioHangController {
                 hoaDonChiTiet.setNgayTao(new Date());
                 hoaDonChiTiet.setTrangThai(2);
 
-                // Lưu chi tiết hóa đơn
+                // Lưu chi tiết hóa đơn từ giỏ hàng chi tiết
                 hoaDonChiTietService.saveHoaDonChiTiet(hoaDonChiTiet);
-
-                //Cap nhat số lượng sản phẩm chi tiết
-                ChiTietSanPham chiTietSanPham = chiTietSanPhamService.findById(ghct.getIdChiTietSanPham().getId());
-                if (chiTietSanPham == null) {
-                    return ResponseEntity.badRequest().body("Không tìm thấy chi tiết sản phẩm");
-                }
-                chiTietSanPham.setSoLuong(chiTietSanPham.getSoLuong() - ghct.getSoLuong());
-                chiTietSanPhamService.saveChiTietSanPham(chiTietSanPham);
-                // Xóa sản phẩm khỏi giỏ hàng
+                //Xóa giỏ hàng chi tiết khi thanh toán thành công
                 gioHangChiTietService.deleteGioHangChitiet(ghct.getId());
 
             }
 
-            return ResponseEntity.ok(Collections.singletonMap("Thanh toán thành công", true));
+            return ResponseEntity.ok(Map.of("message","Đặt hàng thành công","redirectUrl","/gio-hang/checkout-success"));
 
         } catch (Exception e) {
             System.out.println(e.getMessage());
@@ -218,7 +238,7 @@ public class GioHangController {
             }
 
             // Lấy thông tin khách hàng
-            KhachHang khachHang = (KhachHang) httpSession.getAttribute("khachHangSession");
+            KhachHang khachHang = khachHangService.findByEmail(getCurrentUserEmail());
 
             // Lấy ID khuyến mãi an toàn
             Object idKhuyenMaiObj = giaoDich.get("idKhuyenMai");
@@ -253,12 +273,13 @@ public class GioHangController {
             hoaDon.setDonViGiaoHang("Giao hàng tiết kiệm");
             hoaDon.setLoaiHoaDon(true);
             hoaDon.setLoaiThanhToan(false);
-            hoaDon.setTrangThai(6);
+            hoaDon.setTrangThai(10);
             hoaDonService.save(hoaDon);
-
+            khuyenMai.setDaSuDung(khuyenMai.getDaSuDung()+1);
+            khuyenMaiService.updateKhuyenMai(khuyenMai,khuyenMai.getId());
             // Lưu lịch sử trạng thái đơn hàng
             TrangThaiDonHang trangThaiDonHang = new TrangThaiDonHang();
-            trangThaiDonHang.setTrangThai(2);
+            trangThaiDonHang.setTrangThai(10);
             trangThaiDonHang.setGhiChu("Đã thanh toán VNPay - chờ xác nhận");
             trangThaiDonHang.setIdHoaDon(hoaDon);
             trangThaiDonHang.setNgayCapNhat(new Date());
@@ -327,7 +348,7 @@ public class GioHangController {
     @ResponseBody
     public ResponseEntity<?> ThanhToanVNPay(@RequestBody Map<String, Object> sanPhamThanhToan,
                                             HttpServletRequest request) {
-        KhachHang khachHangSession = (KhachHang) httpSession.getAttribute("khachHangSession");
+        KhachHang khachHangSession = khachHangService.findByEmail(getCurrentUserEmail());
 
         // Kiểm tra đăng nhập
         if (khachHangSession == null) {
@@ -379,9 +400,8 @@ public class GioHangController {
     }
 
     @GetMapping("/thanh-toan")
-
     public String thanhToan(Model model) {
-        KhachHang khachHangSessiong = (KhachHang) httpSession.getAttribute("khachHangSession");
+        KhachHang khachHangSessiong = khachHangService.findByEmail(getCurrentUserEmail());
         if (khachHangSessiong == null) {
             model.addAttribute("message", "Bạn chưa đăng nhập!");
             return "redirect:/dang-nhap";
@@ -400,64 +420,124 @@ public class GioHangController {
         double tien = 0;
         for (GioHangChiTiet ghct : lstGioHangChiTiet
         ) {
-            tien = tien + ghct.getTongTien();
+          tien += ghct.getTongTien();
         }
         double shippingFee = 65000; // Giả sử phí ship cố định
         double tongTien = tien + shippingFee;
-        double tongTienGiam = 0;
-        KhuyenMai bestKhuyenMai = null;
-        ArrayList<KhuyenMai> khuyenMais = khuyenMaiService.getAllKhuyenMai();
-        for (KhuyenMai km : khuyenMais
-        ) {
-            if (km.getDieuKienApDung() <= tongTien) {
-                float tienGiam = 0;
-                if (km.getLoaiKhuyenMai()) {
-                    tongTienGiam = km.getGiaTriGiam();
-
-                } else {
-                    if ((tongTien * km.getGiaTriGiam()) / 100 > km.getMucGiamGiaToiDa()) {
-                        tongTienGiam = km.getMucGiamGiaToiDa();
+        List<KhuyenMai> lstKhuyenMai = khuyenMaiService.getKhuyenMaiByDieuKienGiam((float) tongTien);
+        List<KhuyenMai> filterKhuyenMai = lstKhuyenMai.stream()
+                .filter(Objects::nonNull) // Lọc các phần tử null
+                .sorted(Comparator.comparingDouble((KhuyenMai km) -> {
+                    if (km.getLoaiKhuyenMai()) { // Tránh lỗi null
+                        return  km.getGiaTriGiam() ;
                     } else {
-                        tongTienGiam = (tongTien * km.getGiaTriGiam()) / 100;
+                        double giamTheoPhanTram =  km.getGiaTriGiam() * tongTien / 100;
+                        double mucGiamToiDa = km.getMucGiamGiaToiDa() ;
+                        return Math.min(giamTheoPhanTram, mucGiamToiDa);
                     }
+                }).reversed())
+                .collect(Collectors.toList());
+        float tongTienGiam;
+        if(filterKhuyenMai.isEmpty()){
+            tongTienGiam =0;
+        }else{
+            KhuyenMai km = filterKhuyenMai.get(0);
+            if(km!=null){
+                if(km.getLoaiKhuyenMai()){
+                    tongTienGiam = km.getGiaTriGiam();
+                }else{
+                    double t1 = km.getMucGiamGiaToiDa();
+                    double t2 = tongTien*km.getGiaTriGiam()/100;
+                    tongTienGiam =(float) Math.min(t1,t2);
                 }
-                if (tienGiam > tongTienGiam) {
-                    tongTienGiam = tienGiam;
-                    bestKhuyenMai = km;
-                }
+            }else{
+                tongTienGiam = 0;
             }
 
         }
-        if (bestKhuyenMai != null) {
-            gioHang.setIdKhuyenMai(bestKhuyenMai);
-        }
-        if (gioHang.getIdKhuyenMai() != null) {
-            KhuyenMai khuyenMai = gioHang.getIdKhuyenMai();
-            if (khuyenMai.getLoaiKhuyenMai()) {
-                tongTienGiam = khuyenMai.getGiaTriGiam();
-            } else {
-                if ((tongTien * khuyenMai.getGiaTriGiam()) / 100 > khuyenMai.getMucGiamGiaToiDa()) {
-                    tongTienGiam = khuyenMai.getMucGiamGiaToiDa();
-                } else {
-                    tongTienGiam = (tongTien * khuyenMai.getGiaTriGiam()) / 100;
 
-                }
-
-            }
-        }
+        model.addAttribute("lstKhuyenMai", filterKhuyenMai);
         model.addAttribute("giamGia", tongTienGiam);
         model.addAttribute("khachHang", khachHangSessiong);
         model.addAttribute("shippingFee", shippingFee);
+        System.out.println((int)tongTien);
         model.addAttribute("totalPrice", tongTien);
         model.addAttribute("lstGioHangChiTiet", lstGioHangChiTiet);
         return "/user/sanpham/checkout";
     }
+    @GetMapping("/changeChoice")
+    @ResponseBody
+    public ResponseEntity<?> changeChoice(@RequestParam("tongTien") int tongTien, Model model){
+            List<KhuyenMai> lstKhuyenMai = khuyenMaiService.getKhuyenMaiByDieuKienGiam((float) tongTien);
+            List<KhuyenMai> filterKhuyenMai = lstKhuyenMai.stream()
+                    .filter(Objects::nonNull) // Lọc các phần tử null
+                    .sorted(Comparator.comparingDouble((KhuyenMai km) -> {
+                        if (km.getLoaiKhuyenMai()) { // Tránh lỗi null
+                            return  km.getGiaTriGiam() ;
+                        } else {
+                            double giamTheoPhanTram =  km.getGiaTriGiam() * tongTien / 100;
+                            double mucGiamToiDa = km.getMucGiamGiaToiDa() ;
+                            return Math.min(giamTheoPhanTram, mucGiamToiDa);
+                        }
+                    }).reversed())
+                    .collect(Collectors.toList());
+            float tongTienGiam;
 
+            if(filterKhuyenMai.isEmpty()){
+                tongTienGiam =0;
+            }else{
+
+                KhuyenMai km = filterKhuyenMai.get(0);
+                if(km!=null){
+                    if(km.getLoaiKhuyenMai()){
+                        tongTienGiam = km.getGiaTriGiam();
+                    }else{
+                        double t1 = km.getMucGiamGiaToiDa();
+                        double t2 = tongTien*km.getGiaTriGiam()/100;
+                        tongTienGiam =(float) Math.min(t1,t2);
+                    }
+                }else{
+                    tongTienGiam = 0;
+                }
+
+            }
+        model.addAttribute("lstKhuyenMai", filterKhuyenMai);
+        return ResponseEntity.ok(Map.of(
+                "tongTienGiam", tongTienGiam,
+                "filterKhuyenMai", filterKhuyenMai
+        ));
+    }
+    @PostMapping("/addVoucher")
+    @ResponseBody
+    public ResponseEntity<?> addVoucher(@RequestBody Map<String,String> Object ){
+        KhuyenMai khuyenMai = khuyenMaiService.findById(Integer.parseInt(String.valueOf(Object.get("idKhuyenMai"))));
+        if(khuyenMai==null){
+            return ResponseEntity.badRequest().body(Map.of("message","Mã khuyến mãi đã hết"));
+        }
+        try{
+            float tongTien = Float.parseFloat(Object.get("tongTien").toString());
+            float tongTienGiam;
+            if(khuyenMai.getLoaiKhuyenMai()){
+                tongTienGiam = khuyenMai.getGiaTriGiam();
+            }else{
+                double t1 = khuyenMai.getMucGiamGiaToiDa();
+                double t2 = tongTien*khuyenMai.getGiaTriGiam()/100;
+                tongTienGiam =(float) Math.min(t1,t2);
+            }
+            GioHang gioHang = gioHangService.findGioHangByIDKH(khachHangService.findByEmail(getCurrentUserEmail()).getId());
+            gioHang.setIdKhuyenMai(khuyenMai);
+            gioHangService.save(gioHang);
+            return ResponseEntity.ok(Map.of("tongTienGiam",tongTienGiam));
+
+        }catch (Exception e){
+             e.printStackTrace();
+        }
+      return ResponseEntity.badRequest().body(Map.of("message","Lỗi khi dùng voucher"));
+    }
     @GetMapping()
     @ResponseBody
     public ResponseEntity<Map<String, Object>> getGioHang(Model model) {
-        KhachHang khachHangSession = (KhachHang) httpSession.getAttribute("khachHangSession");
-
+        KhachHang khachHangSession = khachHangService.findByEmail(getCurrentUserEmail());
         if (khachHangSession == null) {
             return ResponseEntity.badRequest().body(Map.of("message", "Bạn chưa đăng nhập!"));
         }
@@ -509,9 +589,8 @@ public class GioHangController {
 
     @GetMapping("/so-luong")
     @ResponseBody
-
     public ResponseEntity<Map<String, Integer>> getSoLuongGioHang() {
-        KhachHang khachHang = (KhachHang) httpSession.getAttribute("khachHangSession");
+        KhachHang khachHang = khachHangService.findByEmail(getCurrentUserEmail());
         int soLuongSanPham = 0;
         if (khachHang != null) {
             GioHang gh = gioHangService.findGioHangByIDKH(khachHang.getId());
@@ -522,7 +601,6 @@ public class GioHangController {
                 }
             }
         }
-
         Map<String, Integer> response = new HashMap<>();
         response.put("soLuong", soLuongSanPham);
         return ResponseEntity.ok()
@@ -531,10 +609,8 @@ public class GioHangController {
     }
 
     @PostMapping("/them-vao-gio-hang")
-
     public ResponseEntity<?> themSanPhamVaoGioHang(@RequestBody Map<String, Object> sanPhamChon) {
-
-        KhachHang khachHang = (KhachHang) httpSession.getAttribute("khachHangSession");
+        KhachHang khachHang = khachHangService.findByEmail(getCurrentUserEmail());
         if (khachHang != null) {
             try {
                 int soLuong = converToInt(sanPhamChon.get("soLuong"));
@@ -562,25 +638,34 @@ public class GioHangController {
                         return ResponseEntity.badRequest()
                                 .body(Collections.singletonMap("message", "Số lượng sản phẩm trong kho không đủ"));
                     }
-
                     float tongTien = 0;
-                    ArrayList<GioHangChiTiet> lstGHCT = gioHangChiTietService.findByIdGioHang(gioHangService.findGioHangByIDKH(khachHang.getId()).getId());
+                    ArrayList<GioHangChiTiet> lstGHCT = gioHangChiTietService.findByIdGioHang(ghct.getIdGioHang().getId());
                     for (GioHangChiTiet gh : lstGHCT
                     ) {
-                        tongTien = tongTien + gh.getTongTien();
-
-
+                        tongTien += gh.getTongTien();
                 }
 
                 if (tongTien + chiTietSanPham.getGiaBan() * soLuong > 20000000) {
                     return ResponseEntity.badRequest().body(Collections.singletonMap("message", "Đơn hàng vượt quá 20 triệu vui lòng liên hệ để được hỗ trợ"));
                 }
                 ghct.setSoLuong(ghct.getSoLuong() + soLuong);
-
+                ghct.setTongTrongLuong((int)chiTietSanPham.getTrongLuong()*ghct.getSoLuong());
+                ghct.setTongTien(ghct.getDonGia()*ghct.getSoLuong());
                 gioHangChiTietService.saveGioHangChitiet(ghct);
                 return ResponseEntity.ok()
                         .body(Collections.singletonMap("Thêm sản phẩm vào giỏ hàng thành công", true));
             }
+                float tongTien = chiTietSanPham.getGiaBan()*soLuong;
+                ArrayList<GioHangChiTiet> lstGHCT = gioHangChiTietService.findByIdGioHang(gioHangService.findGioHangByIDKH(khachHang.getId()).getId());
+                if(lstGHCT!=null) {
+                    for (GioHangChiTiet gh : lstGHCT
+                    ) {
+                        tongTien += gh.getTongTien();
+                    }
+                    if (tongTien > 20000000) {
+                        return ResponseEntity.badRequest().body(Collections.singletonMap("message", "Đơn hàng vượt quá 20 triệu vui lòng liên hệ để được hỗ trợ"));
+                    }
+                }
             GioHangChiTiet gioHangChiTiet = new GioHangChiTiet();
             gioHangChiTiet.setIdGioHang(gioHangService.findGioHangByIDKH(khachHang.getId()));
             gioHangChiTiet.setIdChiTietSanPham(chiTietSanPham);
@@ -598,10 +683,7 @@ public class GioHangController {
             return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR)
                     .body(Collections.singletonMap("message", "Lỗi khi cập nhật sản phẩm!"));
         }
-    } else
-
-    {
-
+    } else {
         return ResponseEntity.status(HttpStatus.UNAUTHORIZED).body(Map.of("message", "Bạn cần đăng nhập để mua sắm"));
     }
 
@@ -617,20 +699,13 @@ public class GioHangController {
     @PutMapping("/capNhatSoLuongGioHang/{idGHCT}")
     public ResponseEntity<?> capNhatSoLuongGioHang(@PathVariable int idGHCT, @RequestParam int soLuong) {
         GioHangChiTiet gioHangChiTiet = gioHangChiTietService.findById(idGHCT);
-        ArrayList<GioHangChiTiet> lstGHCT = gioHangChiTietService.findByIdGioHang(idGHCT);
-        float tongTien = 0;
-        for (GioHangChiTiet ghct : lstGHCT
-        ) {
-            tongTien = tongTien + ghct.getTongTien();
-        }
         if (gioHangChiTiet != null) {
             ChiTietSanPham chiTietSanPham = chiTietSanPhamService
                     .findById(gioHangChiTiet.getIdChiTietSanPham().getId());
-
             if (chiTietSanPham.getSoLuong() < soLuong) {
                 return ResponseEntity.badRequest()
                         .body(Collections.singletonMap("message", "Số lượng sản phẩm trong kho không đủ"));
-            } else if (chiTietSanPham.getGiaBan() * soLuong + tongTien > 20000000) {
+            } else if (chiTietSanPham.getGiaBan() * soLuong > 20000000) {
                 return ResponseEntity.badRequest().body(Collections.singletonMap("message", "Đơn hàng vượt quá 20 triệu, liên hệ để được hỗ trợ"));
             } else {
                 gioHangChiTiet.setSoLuong(soLuong);
@@ -641,21 +716,6 @@ public class GioHangController {
         return ResponseEntity.badRequest().body(Collections.singletonMap("message", "Cập nhật sản phẩm thất bại"));
     }
 
-    @PutMapping("/update/{id}")
-    public ResponseEntity<?> updateSoLuongSanPham(@PathVariable int id, @RequestParam int soLuong) {
-        GioHangChiTiet ghct = gioHangChiTietService.findById(id);
-        if (ghct == null) {
-            return ResponseEntity.badRequest().body(Collections.singletonMap("message", "Sản phẩm không tồn tại"));
-        }
-        if (soLuong <= 0) {
-            gioHangChiTietService.deleteGioHangChitiet(id);
-            return ResponseEntity.ok(Collections.singletonMap("message", "Sản phẩm đã bị xóa khỏi giỏ hàng"));
-        }
-        ghct.setSoLuong(soLuong);
-        ghct.setTongTien(ghct.getDonGia() * soLuong);
-        gioHangChiTietService.saveGioHangChitiet(ghct);
-        return ResponseEntity.ok(Collections.singletonMap("message", "Cập nhật số lượng thành công"));
-    }
 
     private int converToInt(Object object) {
         if (object instanceof Integer) {
